--- a/src/App.css
+++ b/src/App.css
@@ -1,24 +1,64 @@
 
-
 /* CSS variables */
 :root {
-
+  --dark-blue: hsl(240, 38%, 20%);
+  --gray-blue: hsl(240, 18%, 77%);
+  --font-size: 2rem;
+  --ff: 'Inter';
+  --fw-300: 300;
+  --fw-500: 500;
+  --fw-700: 700;
 }
 
+/* TODO: 
+     figure out storing font locally
+     add shading to img
+*/
+
 main {
+  font-size: 1.2rem;
+  font-weight: var(--fw-300);
+  color: var(--dark-blue);
+  margin-block: 2rem;
+  margin-inline: 1rem;
 
 }
 
 header {
+  display: flex;
+  flex-direction: column;
   background-image: url('../public/images/pattern-bg.svg');
   background-repeat: no-repeat;
-  min-height: 20rem; /* used for testing */
+  background-size: contain;
+  padding-block: 2rem;
+  padding-inline: 2.5rem;
 }
 
 article {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
   background-image: url('../public/images/pattern-quotes.svg');
   background-repeat: no-repeat;
-  min-height: 20rem; /* used for testing */
+  background-position: top;
+  background-size: 25%;
+  margin-block: 2rem;
+  padding-block: 1rem;
+  margin-inline: 1.5rem;
+}
+
+article > p {
+  margin-block: 1rem;
+}
+
+.name {
+  font-weight: var(--fw-700);
+  color: var(--dark-blue);
+}
+
+.title {
+  padding-top: 0;
+  margin-top: 0;
 }
 
 footer {
