--- a/src/App.css
+++ b/src/App.css
@@ -27,18 +27,37 @@ main {
 header {
   display: flex;
   flex-direction: column;
-  background-image: url('../public/images/pattern-bg.svg');
+  background-image: url('../images/pattern-bg.svg');
   background-repeat: no-repeat;
   background-size: contain;
   padding-block: 2rem;
   padding-inline: 2.5rem;
 }
 
+.profile {
+  filter: drop-shadow(0.6rem 1.1rem 0.9rem);
+}
+
+.slider {
+  display: flex;
+  flex-direction: row;
+  justify-content: center;
+  gap: 1.5rem;
+  background-color: white;
+  border-radius: 1rem;
+  max-width: 5rem;
+  padding-block: 0.6rem;
+  padding-inline: 2rem;
+  position: relative;
+  top: -1.3rem;
+  left: 6rem;
+}
+
 article {
   display: flex;
   flex-direction: column;
   align-items: center;
-  background-image: url('../public/images/pattern-quotes.svg');
+  background-image: url('../images/pattern-quotes.svg');
   background-repeat: no-repeat;
   background-position: top;
   background-size: 25%;
