--- a/src/App.css
+++ b/src/App.css
@@ -38,6 +38,16 @@ header {
   filter: drop-shadow(0.6rem 1.1rem 0.9rem);
 }
 
+.visually-hidden {
+  clip: rect(0 0 0 0);
+  clip-path: inset(50%);
+  height: 1px;
+  overflow: hidden;
+  position: absolute;
+  white-space: nowrap;
+  width: 1px;
+}
+
 .slider {
   display: flex;
   flex-direction: row;
