--- a/src/App.css
+++ b/src/App.css
@@ -114,23 +114,17 @@ footer {
 
 @media(min-width: 40rem) {
 
-  body {
-    display: flex;
-    align-items: center;
-  }
-
   main {
-    position: relative;
-    display: flex;
-    flex-direction: row-reverse;
+    display: grid;
+    grid-template-columns: auto auto;
+    grid-template-rows: auto auto;
     align-items: center;
-    z-index: 0;
+    margin-left: 0;
   }
 
   header {
-    position: relative;
-    z-index: 1;
-    min-width: 42rem;
+    grid-column: 2/2;
+    grid-row: 1/1;
   }
 
   .slider {
@@ -143,11 +137,9 @@ footer {
   }
 
   article {
-    position: relative;
-    left: 1rem;
-    top: 0;
+    grid-column: 1/2;
+    grid-row: 1/1;
     font-size: 2rem;
-    z-index: 3;
   }
 
   .name {
@@ -159,6 +151,10 @@ footer {
   }
 
   footer {
+    grid-column: 1/3;
+    grid-row: 2/3;
+    background-position: top left;
+    background-size: 50%;
   }
   
 }
