--- a/src/App.css
+++ b/src/App.css
@@ -115,16 +115,15 @@ footer {
 @media(min-width: 40rem) {
 
   main {
-    display: grid;
-    grid-template-columns: auto auto;
-    grid-template-rows: auto auto;
-    align-items: center;
-    margin-left: 0;
+    margin: 0;
   }
 
   header {
-    grid-column: 2/2;
-    grid-row: 1/1;
+    display: inline-block;
+    position: absolute;
+    right: 5rem;
+    top: 7rem;
+    z-index: 0;
   }
 
   .slider {
@@ -137,24 +136,37 @@ footer {
   }
 
   article {
-    grid-column: 1/2;
-    grid-row: 1/1;
+    position: absolute;
+    top: 13rem;
+    left: 8rem;
+    max-width: 47%;
     font-size: 2rem;
+    z-index: 1;
+    background-position: 6rem -1rem;
+    padding-top: 5rem;
   }
 
   .name {
-    font-size: 1.5rem;
+    position: absolute;
+    top: 22rem;
+    left: 0;
+    font-size: 1.3rem;
   }
 
   .title {
-    font-size: 1.5rem;
+    position: absolute;
+    top: 22rem;
+    left: 10rem;
+    font-size: 1.3rem;
   }
 
   footer {
-    grid-column: 1/3;
-    grid-row: 2/3;
+    position: absolute;
     background-position: top left;
     background-size: 50%;
+    bottom: 0;
+    left: -1rem;
+    min-width: 100%;
   }
   
 }
