--- a/src/App.css
+++ b/src/App.css
@@ -115,10 +115,8 @@ footer {
     margin: 0;
     display: grid;
     grid-template-columns: 1fr 1fr;
-    grid-template-rows: auto auto auto;
     align-items: center;
-    justify-content: center;
-    padding-top: 5rem;
+    padding-top: 6rem;
   }
 
   header {
@@ -163,13 +161,11 @@ footer {
   } */
 
   footer {
-    position: absolute;
-    background-position: bottom left;
-    background-size: 75%;
-    bottom: 0;
-    left: -1rem;
-    min-width: 100%;
-    min-height: 18rem;
+    /* grid-row: 3/3; */
+    grid-column: 1/3;
+    background-position: -2rem 0;
+    min-height: 10rem;
+    /* background-size: contain; */
   }
   
 }
