--- a/src/App.css
+++ b/src/App.css
@@ -112,12 +112,11 @@ footer {
 @media(min-width: 56.25rem) {
 
   main {
-    margin: 0;
     display: grid;
     grid-template-columns: 1fr 1fr;
-    grid-template-rows: auto auto auto;
     align-items: center;
-    padding-top: 6rem;
+    min-height: 100dvh;
+    min-width: 100%;
   }
 
   header {
